--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 .DS_Store
 .vscode
 workspace.code-workspace
+
+# postgres volume
+db-data
+
+# service binaries
+frontendService
+brokerService
+authService
